--- a/SharpFilters/SharpFilters.csproj
+++ b/SharpFilters/SharpFilters.csproj
@@ -35,6 +35,7 @@
     <Compile Include="Analogs\IAnalog.cs" />
     <Compile Include="Analogs\IButterworthAnalog.cs" />
     <Compile Include="Extensions\ComplexCollectionExtensions.cs" />
+    <Compile Include="Extensions\DoubleExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Butterworth.cs" />
     <Compile Include="Enums\FilterType.cs" />
@@ -42,7 +43,9 @@
     <Compile Include="Models\PolesCoefficeints.cs" />
     <Compile Include="Factories\Models\IPolesCoefficientsFactory.cs" />
     <Compile Include="Factories\Models\PolesCoefficientsFactory.cs" />
+    <Compile Include="Transformers\DigitalTransformer.cs" />
     <Compile Include="Transformers\HighpassTransformer.cs" />
+    <Compile Include="Transformers\IDigitalTransformer.cs" />
     <Compile Include="Transformers\ITransformer.cs" />
     <Compile Include="Transformers\LowPassTransformer.cs" />
   </ItemGroup>
