--- a/SharpFilters.Tests/SharpFilters.Tests.csproj
+++ b/SharpFilters.Tests/SharpFilters.Tests.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <Compile Include="Analogs\ButterworthAnalogTest.cs" />
     <Compile Include="Extensions\ComplexCollectionExtensionsTests.cs" />
+    <Compile Include="Extensions\DoubleExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestsCommon\AutoMoqDataAttribute.cs" />
     <Compile Include="TestsCommon\InlineAutoMoqDataAttribute.cs" />
