Added tests to cover the poles coefficients.

--- a/SharpFilters.Tests/SharpFilters.Tests.csproj
+++ b/SharpFilters.Tests/SharpFilters.Tests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Analogs\ButterworthAnalogTest.cs" />
     <Compile Include="Extensions\ComplexCollectionExtensionsTests.cs" />
     <Compile Include="Extensions\DoubleExtensionsTests.cs" />
+    <Compile Include="Models\PolesCoefficientsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestsCommon\AutoMoqDataAttribute.cs" />
     <Compile Include="TestsCommon\InlineAutoMoqDataAttribute.cs" />
