--- a/SharpFilters.Tests/SharpFilters.Tests.csproj
+++ b/SharpFilters.Tests/SharpFilters.Tests.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Models\PolesCoefficientsTests.cs" />
     <Compile Include="Models\PolynomialCoefficientsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\DigitalPolesProviderTests.cs" />
     <Compile Include="TestsCommon\AutoMoqDataAttribute.cs" />
     <Compile Include="TestsCommon\InlineAutoMoqDataAttribute.cs" />
   </ItemGroup>
