--- a/SharpFilters.Tests/SharpFilters.Tests.csproj
+++ b/SharpFilters.Tests/SharpFilters.Tests.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Models\PolynomialCoefficientsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\DigitalPolesProviderTests.cs" />
+    <Compile Include="Providers\IirProviderTests.cs" />
     <Compile Include="TestsCommon\AutoMoqDataAttribute.cs" />
     <Compile Include="TestsCommon\InlineAutoMoqDataAttribute.cs" />
   </ItemGroup>
