Refactored the butterworth and filter interface so that it becomes a design that can be passed to the actual filter.

--- a/SharpFilters/SharpFilters.csproj
+++ b/SharpFilters/SharpFilters.csproj
@@ -41,7 +41,7 @@
     <Compile Include="Factories\Models\IPolynomialCoefficientsFactory.cs" />
     <Compile Include="Factories\Models\PolynomialCoefficientsFactory.cs" />
     <Compile Include="IButterworth.cs" />
-    <Compile Include="IFilter.cs" />
+    <Compile Include="IFilterDesign.cs" />
     <Compile Include="Models\IPolynomialCoefficients.cs" />
     <Compile Include="Models\PolynomialCoefficients.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
