--- a/SharpFilters.Tests/packages.config
+++ b/SharpFilters.Tests/packages.config
@@ -1,15 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoFixture" version="3.49.1" targetFramework="net461" />
-  <package id="AutoFixture.AutoMoq" version="3.49.1" targetFramework="net461" />
-  <package id="AutoFixture.Xunit2" version="3.49.1" targetFramework="net461" />
-  <package id="Castle.Core" version="4.0.0-beta002" targetFramework="net461" />
-  <package id="Moq" version="4.6.38-alpha" targetFramework="net461" />
-  <package id="xunit" version="2.2.0-beta3-build3402" targetFramework="net461" />
-  <package id="xunit.abstractions" version="2.0.1" targetFramework="net461" />
-  <package id="xunit.assert" version="2.2.0-beta3-build3402" targetFramework="net461" />
-  <package id="xunit.core" version="2.2.0-beta3-build3402" targetFramework="net461" />
-  <package id="xunit.extensibility.core" version="2.2.0-beta3-build3402" targetFramework="net461" />
-  <package id="xunit.extensibility.execution" version="2.2.0-beta3-build3402" targetFramework="net461" />
-  <package id="xunit.runner.console" version="2.2.0-beta3-build3402" targetFramework="net461" developmentDependency="true" />
+  <package id="AutoFixture" version="3.50.2" targetFramework="net461" />
+  <package id="AutoFixture.AutoMoq" version="3.50.2" targetFramework="net461" />
+  <package id="AutoFixture.Xunit2" version="3.50.2" targetFramework="net461" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
+  <package id="Moq" version="4.5.23" targetFramework="net461" />
+  <package id="xunit" version="2.1.0" targetFramework="net461" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="xunit.assert" version="2.1.0" targetFramework="net461" />
+  <package id="xunit.core" version="2.1.0" targetFramework="net461" />
+  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net461" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net461" />
+  <package id="xunit.runner.console" version="2.1.0" targetFramework="net461" developmentDependency="true" />
 </packages>
