--- a/SharpFilters/SharpFilters.csproj
+++ b/SharpFilters/SharpFilters.csproj
@@ -81,5 +81,8 @@
     <Folder Include="Factories\" />
     <Folder Include="Factories\Models\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="LICENSE.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
